Fix for in page nav heading alignment.

--- a/styles/min-width-1500px/in-page-nav.scss
+++ b/styles/min-width-1500px/in-page-nav.scss
@@ -57,7 +57,7 @@ body #in-page-nav
 		margin: 10px 0px 0px 20px;
 		padding: 0px 0px 10px 0px;
 		font-size: 1em;
-		left: -10px;
+		left: -15px;
 	}
 	ul
 	{
